--- a/timelineview/src/main/res/layout/cell.xml
+++ b/timelineview/src/main/res/layout/cell.xml
@@ -1,18 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cell"
     android:layout_width="@dimen/cell_size"
     android:layout_height="@dimen/cell_size"
-    android:layout_margin="3dp"
     android:background="@android:color/holo_blue_light"
-    android:orientation="vertical">
+    android:orientation="horizontal">
+
+    <View
+        android:id="@+id/startBar"
+        android:layout_width="@dimen/bar_width"
+        android:layout_height="match_parent"
+        android:background="@android:color/white"
+        android:visibility="invisible" />
 
     <TextView
         android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_weight="4"
+        android:gravity="center"
+        android:text="12"
         android:textAlignment="center" />
 
-</FrameLayout>
+    <View
+        android:id="@+id/endBar"
+        android:layout_width="@dimen/bar_width"
+        android:layout_height="match_parent"
+        android:background="@android:color/white"
+        android:visibility="invisible" />
+
+</LinearLayout>
