--- a/timelineview/src/main/res/layout/cell.xml
+++ b/timelineview/src/main/res/layout/cell.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cell"
     android:layout_width="@dimen/cell_size"
@@ -12,23 +13,20 @@
         android:layout_width="@dimen/bar_width"
         android:layout_height="match_parent"
         android:background="@android:color/white"
-        android:visibility="invisible" />
+        android:visibility="gone" />
 
-    <TextView
-        android:id="@+id/text"
+    <ImageView
+        android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_weight="4"
-        android:gravity="center"
-        android:text="12"
-        android:textAlignment="center" />
+        android:layout_weight="1"
+        android:scaleType="fitXY" />
 
     <View
         android:id="@+id/endBar"
         android:layout_width="@dimen/bar_width"
         android:layout_height="match_parent"
         android:background="@android:color/white"
-        android:visibility="invisible" />
+        android:visibility="gone" />
 
 </LinearLayout>
